--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,14 +14,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup PHP environment
+      uses: nanasess/setup-php@v3.0.6
+      with:
+        php-version: 5.6
+
     - name: Validate composer.json and composer.lock
       run: composer validate
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run test suite
       run: vendor/bin/phpunit tests/
